# all

./: .gitignore  put n distinct objects into k distinct boxes
NQP/: CMakeLists.txt
NQP/src/: CMakeLists.txt  NNLSQPSolver.cpp  NNLSQPSolver.h  callback.cpp  callback.h  core.cpp  core.h  decorators.cpp  decorators.h  linSolvers.cpp  linSolvers.h  log.cpp  log.h  preprocessor.cpp  preprocessor.h  scaler.cpp  scaler.h  timers.cpp  timers.h  types.h  utils.cpp  utils.h
NQP/tests/: CMakeLists.txt  TxtParser.cpp  TxtParser.h  configuration.h  data_writer.cpp  data_writer.h  main.cpp  qld.h  qp.cpp  qp.h  qp_utils.cpp  qp_utils.h  test.cpp  test_data.h  test_utils.cpp  test_utils.h
src/: CMakeLists.txt  NNLSQPSolver.cpp  log.cpp  types.h  utils.h
tests/: CMakeLists.txt  qld.cpp  test.cpp  test_data.h
