cmake_minimum_required(VERSION 3.14)
project(nnls_qp_solver)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
enable_testing()
set(CMAKE_CXX_FLAGS -g)
set(CMAKE_C_FLAGS  -g)
set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
add_library(qnnls SHARED)
add_executable(nnls_tests)
#add_compile_definitions(TEST_MODE)
add_subdirectory(src)
add_subdirectory(tests)
target_include_directories(nnls_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_link_libraries(nnls_tests PRIVATE qnnls gtest gmock)
add_test(NAME nnls_tests COMMAND nnls_tests)
